[package]
name = "view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", default-features = false, features = ["derive", "alloc"] }
regex = { version = "1.5.4", default-features = false, features = ["std", "perf"] }
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
quickcheck = { version = "1.0.3", optional = true }
thiserror = "1.0.30"


[dev-dependencies]
serde_json = { version = "1.0.79", features = ["raw_value"] }
quickcheck = { version = "1.0.3" }

[build-dependencies]
lalrpop = "0.19.7"

[features]
arbitrary = ["quickcheck"]
